# gimme

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hello_world_sqlite.py
src/gimme/: injectors.py  providers.py  utils.py
tests/: helpers.py  test_injectors.py
